sna: Avoid randomly changing domains of active bo

After attaching the bo to the scanout, mark it as retired in order to
update its domains so that the assertion during retirement later is
correct.

Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=49526
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>